# fbb_bs2x_dev

./: .gitignore  COPYRIGHT  COPYRIGHT.OpenSource  LICENSE  LICENSE.OpenSource  OAT.xml  README.en.md  README.md  config.sh
.devcontainer/: Dockerfile  Dockerfile-for-build-image  devcontainer.json
.github/workflows/: build.yml  docker-build.yml  release.yml
docs/: IO复用关系表.md  README.md
docs/debug/Cyber Security Precautions for SDK Secondary Development/: BS2XV100 SDK二次开发网络安全 注意事项.md
docs/debug/Maintenance and Test Guide/: BS2XV100 维测 指导书.md
docs/debug/Memory Maintenance and Test Guide/: BS2XV100 内存维测 指导书.md
docs/debug/SDK Development Environment Setup User Guide/: BS2XV100 SDK开发环境搭建 用户指南.md
docs/debug/SDK Sample User Guide/: BS2XV100 SDK Sample使用指南.md
src/: .clang-format  CMakeLists.txt  build.py
src/application/: Kconfig
src/drivers/chips/bs21e/board/: CMakeLists.txt
src/drivers/chips/bs21e/board/board_config/: CMakeLists.txt  boards.h
src/drivers/chips/bs21e/board/linker/: CMakeLists.txt
src/drivers/chips/bs21e/board/linker/standard/: CMakeLists.txt  linker.prelds  memory_config.h  usb.lds  xip_section.lds
src/drivers/chips/bs21e/board/memory_config/: CMakeLists.txt
src/drivers/chips/bs21e/board/memory_config/include/: memory_config_common.h
src/drivers/chips/bs21e/board/memory_config/include/product/: product.h  product_evb_standard.h  product_none.h
src/include/: errcode.h
src/open_source/: CMakeLists.txt
src/protocol/: CMakeLists.txt  Kconfig
tools/: HiSparkStudio工具下载及安装.md  HiSparkStudio编译及烧录.md  README.md  WSL子系统编译及烧录.md
(+1256 files in other folders)
